# photosift

./: .gitignore  CLAUDE.md  PhotoSift_FutureWork.md  PhotoSift_Spec.md  index.html  package-lock.json  package.json  vitest.config.ts
.claude/: settings.local.json
.playwright-mcp/: page-2026-04-09T16-57-19-258Z.yml
benchmark/: README.md  _smoke_test.py  build_workbook.py  photosift_benchmark.xlsx  run_benchmark.py  sample_library.py
docs/: perf-baseline-2026-04-16.md  phase2-ai-qa.md
docs/design_handoff_photosift/: Photosift.html  README.md  logos.jsx  placeholders.jsx  screens-compare.jsx  screens-grid.jsx  screens-import.jsx  screens-library.jsx  screens-route.jsx  screens-select.jsx  screens-triage.jsx  theme.jsx
scripts/: screenshot.ps1
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/ai/: cat.rs  eye.rs  eye_onnx.rs  face.rs  mock.rs  mod.rs  mouth.rs  mouth_onnx.rs  sharpness.rs  worker.rs
src-tauri/src/commands/: ai.rs  culling.rs  export.rs  image.rs  import.rs  mod.rs  project.rs  rating.rs  scan.rs  settings.rs  shoots.rs
src-tauri/src/db/: schema.rs
src-tauri/src/ingest/: clustering.rs  copy.rs  hashing.rs  mod.rs  phash.rs  preview.rs  progress.rs  thumbnail.rs  walker.rs
src-tauri/src/metadata/: exif.rs  mod.rs  orientation.rs  xmp.rs  xmp_queue.rs
src-tauri/src/pipeline/: cache.rs  decoder.rs  embedded.rs  mod.rs  prefetch.rs  protocol.rs
src/components/: AiEyeIcon.tsx  AiPanel.tsx  AiPickBadge.tsx  AiProgressIndicator.tsx  AiSharpnessBadge.tsx  AiSmileIcon.tsx  AiSpeciesIcon.tsx  ComparisonView.tsx  EmptyViewState.tsx  EyeStatusBadge.tsx  FaceThumb.tsx  Filmstrip.tsx  FlagFlash.tsx  GridView.tsx  GroupStack.tsx  GroupStrip.tsx  GroupTray.tsx  HeatmapOverlay.tsx  ImportDialog.tsx  InnerStrip.tsx  LoupeView.tsx  MetadataOverlay.tsx  ProgressBar.tsx  RatingBar.tsx  SelectPassChips.tsx  SettingsDialog.tsx  ShortcutHints.tsx  Toast.tsx  Toolbar.tsx  ViewHint.tsx  ViewSelector.tsx
src/hooks/: useImageLoader.ts  useKeyboardNav.ts
src/lib/: groupRanking.ts  groupTray.ts  loupeZoom.ts
src/pages/: CullPage.tsx  PrimitivesPage.tsx  (+1 more)
(+48 files in other folders)
