[package]
name = "photosift"
version = "0.1.0"
edition = "2021"

[lib]
name = "photosift_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
rawler = "0.7"
image = { version = "0.25", features = ["jpeg", "tiff", "png"] }
kamadak-exif = "0.5"
quick-xml = "0.36"
rayon = "1.10"
lru = "0.12"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
thiserror = "2"
http = "1"
dirs = "5"
walkdir = "2"
uuid = { version = "1", features = ["v4"] }
ort = { version = "=2.0.0-rc.12", features = ["cuda"] }
zune-jpeg = "0.4"
ndarray = "0.16"
crossbeam-channel = "0.5"
anyhow = "1"

# Dev-only MCP bridge: embeds an MCP server inside the Tauri app so
# Claude Code can take screenshots, read the DOM, and execute JS in
# the webview for programmatic UI verification. Registered only under
# `#[cfg(debug_assertions)]` in `lib.rs`, so release builds don't ship
# it. TCP mode (127.0.0.1:4000) sidesteps the plugin's Unix-socket
# default, which is awkward on Windows.
tauri-plugin-mcp = { git = "https://github.com/P3GLEG/tauri-plugin-mcp", features = ["devtools"] }

[dev-dependencies]
tempfile = "3"

# Optimize hot-path crates in dev builds. Without these overrides, ORT
# inference in `cargo tauri dev` takes >1s per image because debug
# codegen for the inference runtime + image preprocessing is 5-10x
# slower than release. Bumping opt-level for just these crates keeps
# our own edit-compile loop fast while letting the actual heavy work
# run at full speed.
[profile.dev.package.ort]
opt-level = 3
[profile.dev.package.ort-sys]
opt-level = 3
[profile.dev.package.image]
opt-level = 3
[profile.dev.package.zune-jpeg]
opt-level = 3
[profile.dev.package.rawler]
opt-level = 3
[profile.dev.package."jpeg-decoder"]
opt-level = 3
